working async with telescope + native neovim ui

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 curl = "0.4.44"
 mlua = {version = "0.6", features = ["luajit", "vendored", "module", "macros", "send", "async"]}
-nvim-oxi = "0.1"
+# nvim-oxi = "0.1"
 serde_json = "1.0.68"
 serde = { version = "1.0.130", features = ["derive"] }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
@@ -19,3 +19,5 @@ urlencoding = "2.1.2"
 # sha256 = "1.1.2"
 regex = "1.7.3"
 md5 = "0.7.0"
+tokio = { version = "1", features = ["full"] }
+futures = "0.3.28"
