--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,13 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-curl = "0.4.44"
 mlua = {version = "0.6", features = ["luajit", "vendored", "module", "macros", "send", "async"]}
-# nvim-oxi = "0.1"
 serde_json = "1.0.68"
 serde = { version = "1.0.130", features = ["derive"] }
+reqwest-retry = "0.2.2"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+reqwest-middleware = "0.2.1"
 urlencoding = "2.1.2"
-# sha256 = "1.1.2"
 regex = "1.7.3"
 md5 = "0.7.0"
 tokio = { version = "1", features = ["full"] }
